--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -44,3 +44,5 @@
   </div>
 </body>
 </html>
+<img src="images/lilith1.png" alt="Lilith portrait">
+<img src="images/lilith1.jpg" alt="Lilith reading">
