--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -25,6 +25,14 @@
   <section class="section">
     <h2>Nocturne Nights — Lilith’s Private Collection</h2>
     <div class="gallery">
+      <div class="hero" style="background-image: url('images/lilithportrait.png');">
+  <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
+</div>
+<section class="section about">
+  <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+
+      <img src="images/lilithportrait.png" alt="Lilith Nocturne portrait">
+
       <img src="images/lilith1.png" alt="Lilith portrait">
       <img src="images/lilith2.png" alt="Lilith reading">
       <img src="images/locked1.png" alt="Locked - Premium" style="opacity: 0.4;">
@@ -44,6 +52,4 @@
   </div>
 </body>
 </html>
-<img src="images/lilith1.png" alt="Lilith portrait">
-<img src="images/lilith1.jpg" alt="Lilith reading">
 
