--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -8,13 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero" style="background-image: url('images/lilith1.png');">
-    <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
+ <div class="hero" style="background-image: url('images/lilithportrait.png');">
+  <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
+</div>
+ <section class="section about">
+  <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+  <div class="about-text">
+    <h2>Who is Lilith?</h2>
+    ...
   </div>
+</section>
 
-  <section class="section about">
-    <img src="images/lilith2.png" alt="Lilith reading by candlelight">
-    <div class="about-text">
       <h2>Who is Lilith?</h2>
       <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
       <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
