--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -13,19 +13,15 @@
 </div>
  <section class="section about">
   <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+  <section class="section about">
   <div class="about-text">
     <h2>Who is Lilith?</h2>
-    ...
+    <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
+    <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
+    <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
   </div>
+  <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
 </section>
-
-      <h2>Who is Lilith?</h2>
-      <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
-      <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
-      <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
-    </div>
-  </section>
-
   <section class="section">
     <h2>Nocturne Nights — Lilith’s Private Collection</h2>
     <div class="gallery">
@@ -33,7 +29,6 @@
   <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
 </div>
 <section class="section about">
-  <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
 
       <img src="images/lilithportrait.png" alt="Lilith Nocturne portrait">
 
