--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -26,6 +26,7 @@
   <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
 </div>
 <section class="section about">
+   <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
       <img src="images/locked1.png" alt="Locked - Premium" style="opacity: 0.4;">
       <img src="images/locked2.png" alt="Locked - Premium" style="opacity: 0.4;">
     </div>
