--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -8,25 +8,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="hero" style="background-image: url('images/lilithportrait.png');">
-  <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
-  <section class="section about">
-  <div class="about-text">
-    <h2>Who is Lilith?</h2>
-    <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
-    <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
-    <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
+  <div class="hero" style="background-image: url('images/lilith-banner.png');">
+    <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
   </div>
-  <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
-</section>
+
+  <section class="section about">
+    <div class="about-text">
+      <h2>Who is Lilith?</h2>
+      <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
+      <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
+      <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
+    </div>
+    <img src="images/lilithreading.png" alt="Lilith reading by candlelight" style="max-width: 400px; border-radius: 12px;">
+  </section>
+
   <section class="section">
     <h2>Nocturne Nights — Lilith’s Private Collection</h2>
     <div class="gallery">
-      <div class="hero" style="background-image: url('images/lilithportrait.png');">
-  <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
-</div>
-<section class="section about">
-   <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+      <img src="images/lilithportrait.png" alt="Lilith portrait">
+      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
       <img src="images/locked1.png" alt="Locked - Premium" style="opacity: 0.4;">
       <img src="images/locked2.png" alt="Locked - Premium" style="opacity: 0.4;">
     </div>
@@ -44,4 +44,5 @@
   </div>
 </body>
 </html>
+
 
