--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero" style="background-image: url('images/lilith-banner.png');">
+  <div class="hero" style="background-image: url('images/lilith-banner.png'); background-size: cover; background-position: center;">
     <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
   </div>
 
@@ -44,5 +44,6 @@
   </div>
 </body>
 </html>
+
 
 
