--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -27,13 +27,37 @@
     <div class="gallery">
       <img src="images/lilithportrait.png" alt="Lilith portrait">
       <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
-      <img src="images/locked1.png" alt="Locked - Premium" style="opacity: 0.4;">
-      <img src="images/locked2.png" alt="Locked - Premium" style="opacity: 0.4;">
     </div>
-    <p style="margin-top: 1em; text-align: center;">
-      <button>Unlock Spicy Tier</button>
-      <button>Explore Intimate Tier</button>
-    </p>
+  </section>
+
+  <section class="section gallery-tier">
+    <h3>Dark Whispers — Spicy Tier</h3>
+    <div class="gallery">
+      <img src="images/lilith-spicy1.png" alt="Lilith Spicy 1">
+      <img src="images/lilith-spicy2.png" alt="Lilith Spicy 2">
+      <img src="images/lilith-spicy3.png" alt="Lilith Spicy 3">
+    </div>
+    <p class="caption">Lace slips off shoulders. Candles flicker like secrets. In the Spicy Tier, Lilith plays with danger and delight — soft moans beneath silk, a whispered “closer” echoing in the dark.</p>
+  </section>
+
+  <section class="section gallery-tier">
+    <h3>Velvet Confessions — Intimate Tier</h3>
+    <div class="gallery">
+      <img src="images/lilith-intimate1.png" alt="Lilith Intimate 1">
+      <img src="images/lilith-intimate2.png" alt="Lilith Intimate 2">
+      <img src="images/lilith-intimate3.png" alt="Lilith Intimate 3">
+    </div>
+    <p class="caption">These are the moments just before surrender. Eyes heavy. Breath uneven. Lilith lets the mask drop here — soft, sacred, and bare in a way more terrifying than lust.</p>
+  </section>
+
+  <section class="section gallery-tier">
+    <h3>Nocturne Nights (Unlocked) — Uncensored Tier</h3>
+    <div class="gallery">
+      <img src="images/lilith-uncensored1.png" alt="Lilith Uncensored 1">
+      <img src="images/lilith-uncensored2.png" alt="Lilith Uncensored 2">
+      <img src="images/lilith-uncensored3.png" alt="Lilith Uncensored 3">
+    </div>
+    <p class="caption">This is where Lilith stops pretending. Her body is a spell. Her voice is a sin. Nothing is blurred, nothing withheld. You asked for her completely — and she said yes.</p>
   </section>
 
   <div class="cta">
@@ -44,6 +68,3 @@
   </div>
 </body>
 </html>
-
-
-
