--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <div class="hero" style="background-image: url('images/lilith-banner.jpg'); background-size: cover; background-position: center;">
+  <div class="hero" style="background-image: url('images/lilith-banner.png'); background-size: cover; background-position: center;">
     <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
   </div>
 
@@ -53,14 +53,14 @@
       <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
       <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
     </div>
-    <img src="images/lilithreading.jpg" alt="Lilith reading by candlelight" style="max-width: 400px; border-radius: 12px;">
+    <img src="images/lilithreading.png" alt="Lilith reading by candlelight" style="max-width: 400px; border-radius: 12px;">
   </section>
 
   <section class="section">
     <h2>Nocturne Nights — Lilith’s Private Collection</h2>
     <div class="gallery">
-      <img src="images/lilithportrait.jpg" alt="Lilith portrait">
-      <img src="images/lilithreading.jpg" alt="Lilith reading by candlelight">
+      <img src="images/lilithportrait.png" alt="Lilith portrait">
+      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
     </div>
   </section>
 
