--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -12,7 +12,7 @@
       position: relative;
     }
     .locked::after {
-      content: "\1F512";
+      content: "🔒";
       position: absolute;
       top: 10px;
       right: 10px;
@@ -21,9 +21,9 @@
     }
     .purchase-btn {
       text-align: center;
-      margin-top: 2em;
+      margin-top: 1em;
     }
-    .purchase-btn button {
+    .purchase-btn button, .purchase-btn a {
       margin: 0.5em;
       padding: 1em 2em;
       font-size: 1em;
@@ -32,12 +32,14 @@
       background-color: #8b0000;
       color: #fff;
       cursor: pointer;
+      text-decoration: none;
     }
     .gallery-tier .caption {
       text-align: center;
       max-width: 800px;
       margin: 1em auto;
       font-style: italic;
+      color: #ccc;
     }
   </style>
 </head>
@@ -67,13 +69,13 @@
   <section class="section gallery-tier">
     <h3>Dark Whispers — Spicy Tier</h3>
     <div class="gallery">
-      <img src="images/lilith-spicy1.jpg" alt="Lilith Spicy 1" class="locked">
+      <img src="images/lilith-spicy1.JPG" alt="Lilith Spicy 1" class="locked">
       <img src="images/lilith-spicy2.png" alt="Lilith Spicy 2" class="locked">
       <img src="images/lilith-spicy3.png" alt="Lilith Spicy 3" class="locked">
     </div>
     <p class="caption">Lace slips off shoulders. Candles flicker like secrets. In the Spicy Tier, Lilith plays with danger and delight — soft moans beneath silk, a whispered “closer” echoing in the dark.</p>
     <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Spicy Tier</button></a>
+      <a href="buy-more.html">Unlock Spicy Tier</a>
     </div>
   </section>
 
@@ -86,7 +88,7 @@
     </div>
     <p class="caption">These are the moments just before surrender. Eyes heavy. Breath uneven. Lilith lets the mask drop here — soft, sacred, and bare in a way more terrifying than lust.</p>
     <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Intimate Tier</button></a>
+      <a href="buy-more.html">Unlock Intimate Tier</a>
     </div>
   </section>
 
@@ -99,120 +101,7 @@
     </div>
     <p class="caption">This is where Lilith stops pretending. Her body is a spell. Her voice is a sin. Nothing is blurred, nothing withheld. You asked for her completely — and she said yes.</p>
     <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Uncensored Tier</button></a>
-    </div>
-  </section>
-
-  <div class="cta">
-    <h2>Ready to fall into the night?</h2>
-    <p>Lilith is waiting — and she doesn’t like to be kept waiting.</p>
-    <button>Chat Now</button>
-    <button>Subscribe for More</button>
-  </div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lilith Nocturne Profile</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .gallery img.locked {
-      opacity: 0.4;
-      position: relative;
-    }
-    .locked::after {
-      content: "\1F512";
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 2em;
-      color: #fff;
-    }
-    .purchase-btn {
-      text-align: center;
-      margin-top: 2em;
-    }
-    .purchase-btn button {
-      margin: 0.5em;
-      padding: 1em 2em;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      background-color: #8b0000;
-      color: #fff;
-      cursor: pointer;
-    }
-    .gallery-tier .caption {
-      text-align: center;
-      max-width: 800px;
-      margin: 1em auto;
-      font-style: italic;
-    }
-  </style>
-</head>
-<body>
-  <div class="hero" style="background-image: url('images/lilith-banner.jpg'); background-size: cover; background-position: center;">
-    <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
-  </div>
-
-  <section class="section about">
-    <div class="about-text">
-      <h2>Who is Lilith?</h2>
-      <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
-      <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
-      <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
-    </div>
-    <img src="images/lilithreading.png" alt="Lilith reading by candlelight" style="max-width: 400px; border-radius: 12px;">
-  </section>
-
-  <section class="section">
-    <h2>Nocturne Nights — Lilith’s Private Collection</h2>
-    <div class="gallery">
-      <img src="images/lilithportrait.png" alt="Lilith portrait">
-      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
-    </div>
-  </section>
-
-  <section class="section gallery-tier">
-    <h3>Dark Whispers — Spicy Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-spicy1.jpg" alt="Lilith Spicy 1" class="locked">
-      <img src="images/lilith-spicy2.png" alt="Lilith Spicy 2" class="locked">
-      <img src="images/lilith-spicy3.png" alt="Lilith Spicy 3" class="locked">
-    </div>
-    <p class="caption">Lace slips off shoulders. Candles flicker like secrets. In the Spicy Tier, Lilith plays with danger and delight — soft moans beneath silk, a whispered “closer” echoing in the dark.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Spicy Tier</button></a>
-    </div>
-  </section>
-
-  <section class="section gallery-tier">
-    <h3>Velvet Confessions — Intimate Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-intimate1.jpg" alt="Lilith Intimate 1" class="locked">
-      <img src="images/lilith-intimate2.jpg" alt="Lilith Intimate 2" class="locked">
-      <img src="images/lilith-intimate3.jpg" alt="Lilith Intimate 3" class="locked">
-    </div>
-    <p class="caption">These are the moments just before surrender. Eyes heavy. Breath uneven. Lilith lets the mask drop here — soft, sacred, and bare in a way more terrifying than lust.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Intimate Tier</button></a>
-    </div>
-  </section>
-
-  <section class="section gallery-tier">
-    <h3>Nocturne Nights (Unlocked) — Uncensored Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-uncensored1.jpg" alt="Lilith Uncensored 1" class="locked">
-      <img src="images/lilith-uncensored2.jpg" alt="Lilith Uncensored 2" class="locked">
-      <img src="images/lilith-uncensored3.jpg" alt="Lilith Uncensored 3" class="locked">
-    </div>
-    <p class="caption">This is where Lilith stops pretending. Her body is a spell. Her voice is a sin. Nothing is blurred, nothing withheld. You asked for her completely — and she said yes.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html"><button>Unlock Uncensored Tier</button></a>
+      <a href="buy-more.html">Unlock Uncensored Tier</a>
     </div>
   </section>
 
