--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -69,7 +69,7 @@
   <section class="section gallery-tier">
     <h3>Dark Whispers — Spicy Tier</h3>
     <div class="gallery">
-      <img src="images/lilith-spicy1.JPG" alt="Lilith Spicy 1" class="locked">
+      <img src="images/lilith-spicy1.png" alt="Lilith Spicy 1" class="locked">
       <img src="images/lilith-spicy2.png" alt="Lilith Spicy 2" class="locked">
       <img src="images/lilith-spicy3.png" alt="Lilith Spicy 3" class="locked">
     </div>
