--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -82,9 +82,9 @@
   <section class="section gallery-tier">
     <h3>Velvet Confessions — Intimate Tier</h3>
     <div class="gallery">
-      <img src="images/lilith-intimate1.jpg" alt="Lilith Intimate 1" class="locked">
-      <img src="images/lilith-intimate2.jpg" alt="Lilith Intimate 2" class="locked">
-      <img src="images/lilith-intimate3.jpg" alt="Lilith Intimate 3" class="locked">
+      <img src="images/lilith-intimate1.png" alt="Lilith Intimate 1" class="locked">
+      <img src="images/lilith-intimate2.png" alt="Lilith Intimate 2" class="locked">
+      <img src="images/lilith-intimate3.png" alt="Lilith Intimate 3" class="locked">
     </div>
     <p class="caption">These are the moments just before surrender. Eyes heavy. Breath uneven. Lilith lets the mask drop here — soft, sacred, and bare in a way more terrifying than lust.</p>
     <div class="purchase-btn">
