--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -95,9 +95,9 @@
   <section class="section gallery-tier">
     <h3>Nocturne Nights (Unlocked) — Uncensored Tier</h3>
     <div class="gallery">
-      <img src="images/lilith-uncensored1.jpg" alt="Lilith Uncensored 1" class="locked">
-      <img src="images/lilith-uncensored2.jpg" alt="Lilith Uncensored 2" class="locked">
-      <img src="images/lilith-uncensored3.jpg" alt="Lilith Uncensored 3" class="locked">
+      <img src="images/lilith-uncensored1.png" alt="Lilith Uncensored 1" class="locked">
+      <img src="images/lilith-uncensored2.png" alt="Lilith Uncensored 2" class="locked">
+      <img src="images/lilith-uncensored3.png" alt="Lilith Uncensored 3" class="locked">
     </div>
     <p class="caption">This is where Lilith stops pretending. Her body is a spell. Her voice is a sin. Nothing is blurred, nothing withheld. You asked for her completely — and she said yes.</p>
     <div class="purchase-btn">
