--- a/buy-more.html
+++ b/buy-more.html
@@ -33,7 +33,6 @@
     .card h3 {
       margin-top: 0;
       font-size: 1.4em;
-      color: #ff6f91;
     }
     .card p {
       font-size: 0.95em;
@@ -51,75 +50,89 @@
       text-decoration: none;
       cursor: pointer;
     }
-    .purchase-btn {
-      text-align: center;
-      margin-top: 2em;
-    }
-    .purchase-btn a {
-      margin: 0.5em;
-      padding: 0.75em 1.5em;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      background-color: #8b0000;
-      color: #fff;
-      text-decoration: none;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
   <h1>Unlock Lilith's Exclusive Content</h1>
   <p style="text-align:center; max-width: 600px; margin: 1em auto;">
-    Each tier unlocks a deeper level of intimacy, mystery, and connection. Choose your experience. Or choose them all.
+    A darker world awaits. Explore Lilith’s galleries, custom creations, and membership tiers through the Nocturne Network.
   </p>
 
+  <h2>Gallery Unlocks</h2>
   <div class="tiers">
     <div class="card">
       <h3>Spicy Tier – $5</h3>
-      <p>3 exclusive spicy images<br>+ teasing captions<br>+ access to future spicy drops</p>
-      <a href="https://buy.stripe.com/test_spicy123" target="_blank">Unlock via Stripe</a>
+      <p>3 seductive images<br>+ teasing captions<br>+ digital access link</p>
+      <a href="https://yourname.gumroad.com/l/lilith-spicy">Unlock via Gumroad</a>
     </div>
     <div class="card">
       <h3>Intimate Tier – $10</h3>
-      <p>3 deeply personal images<br>+ poetic confessions<br>+ includes Spicy Tier</p>
-      <a href="https://buy.stripe.com/test_intimate123" target="_blank">Unlock via Stripe</a>
+      <p>3 personal, emotional images<br>+ soft connection energy<br>+ digital access link</p>
+      <a href="https://yourname.gumroad.com/l/lilith-intimate">Unlock via Gumroad</a>
     </div>
     <div class="card">
       <h3>Uncensored Tier – $20</h3>
-      <p>3 fully raw images<br>+ NSFW access<br>+ includes Spicy & Intimate</p>
-      <a href="https://buy.stripe.com/test_uncensored123" target="_blank">Unlock via Stripe</a>
+      <p>3 NSFW images<br>+ poetic intensity<br>+ uncensored gallery</p>
+      <a href="https://yourname.gumroad.com/l/lilith-uncensored">Unlock via Gumroad</a>
     </div>
   </div>
 
-  <h2 style="margin-top: 3em;">Want More?</h2>
-  <p style="text-align:center; max-width: 600px; margin: auto;">
-    Add extra photos to your experience for $2 each — hand-picked, themed, and tailored just for you.
-  </p>
-  <div class="purchase-btn">
-    <a href="https://buy.stripe.com/test_extraphotos123" target="_blank">Buy More Photos</a>
-  </div>
-
-  <h2 style="margin-top: 4em;">Custom Content</h2>
-  <p style="text-align:center; max-width: 700px; margin: auto;">
-    Looking for something even more personal? Lilith offers custom content you can truly connect with. Whispered audios, digital journal entries, love letters — created just for you.
-  </p>
-  <div class="tiers" style="margin-top: 2em;">
+  <h2>Custom Content</h2>
+  <div class="tiers">
     <div class="card">
       <h3>Voice Note – $8</h3>
-      <p>A 1-minute custom audio clip<br>in Lilith's tone — teasing, poetic, or confessional</p>
-      <a href="https://buy.stripe.com/test_voicenote123" target="_blank">Request via Stripe</a>
+      <p>1-minute audio message<br>teasing, poetic, or confessional<br>custom to your request</p>
+      <a href="https://yourname.gumroad.com/l/lilith-voice">Request via Gumroad</a>
     </div>
     <div class="card">
       <h3>Journal Entry – $12</h3>
-      <p>A deeply personal entry from Lilith’s mind<br>written just for you, as if pulled from her diary</p>
-      <a href="https://buy.stripe.com/test_journal123" target="_blank">Request via Stripe</a>
+      <p>Personalized diary-style message<br>deep, romantic, or dark themes</p>
+      <a href="https://yourname.gumroad.com/l/lilith-journal">Request via Gumroad</a>
     </div>
     <div class="card">
       <h3>Voice + Journal Combo – $18</h3>
-      <p>A complete experience:<br>Custom voice note + written entry</p>
-      <a href="https://buy.stripe.com/test_combo123" target="_blank">Get Combo via Stripe</a>
+      <p>Audio message + matching journal note<br>perfect for those craving full immersion</p>
+      <a href="https://yourname.gumroad.com/l/lilith-combo">Order via Gumroad</a>
+    </div>
+  </div>
+
+  <h2>Extra Images</h2>
+  <div class="tiers">
+    <div class="card">
+      <h3>Extra Image – Regular – $2</h3>
+      <p>1 bonus photo — soft, gothic, or fantasy<br>selected from Lilith's private vault</p>
+      <a href="https://yourname.gumroad.com/l/lilith-extra-regular">Buy via Gumroad</a>
+    </div>
+    <div class="card">
+      <h3>Extra Image – NSFW – $3</h3>
+      <p>1 exclusive NSFW photo<br>from Lilith’s locked collection</p>
+      <a href="https://yourname.gumroad.com/l/lilith-extra-nsfw">Buy via Gumroad</a>
+    </div>
+  </div>
+
+  <h2>Become a Member</h2>
+  <p style="text-align:center; max-width: 700px; margin: auto; color: #ccc;">
+    Subscribe monthly and join the inner circle. Access all profiles, regular drops, unlocks, and custom perks.
+  </p>
+  <div class="tiers">
+    <div class="card">
+      <h3>Wanderer – $10/mo</h3>
+      <p>🌙 All profile access<br>🖤 Unlimited GPT chat<br>🔒 Monthly spicy drop</p>
+      <a href="https://yourname.gumroad.com/l/wanderer">Subscribe</a>
+    </div>
+    <div class="card">
+      <h3>Seeker – $20/mo</h3>
+      <p>✨ All Wanderer perks<br>🔓 1 spicy/unlock/month<br>📥 Early access to new characters</p>
+      <a href="https://yourname.gumroad.com/l/seeker">Join the Coven</a>
+    </div>
+    <div class="card">
+      <h3>Devoted – $50/mo</h3>
+      <p>🔥 All Seeker perks<br>🎙️ 1 voice + 🖋️ 1 journal/mo<br>💌 Personalized messages</p>
+      <a href="https://yourname.gumroad.com/l/devoted">Pledge Devotion</a>
     </div>
   </div>
 </body>
 </html>
+
+
+ 
