--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -62,7 +62,7 @@
     <h2>Nocturne Nights — Lilith’s Private Collection</h2>
     <div class="gallery">
       <img src="images/lilithportrait.png" alt="Lilith portrait">
-      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+      <img src="images/lilithbedroom.png" alt="Lilith reading by candlelight">
     </div>
   </section>
 
