--- a/membership.html
+++ b/membership.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark Hearts Membership</title>
+  <title>Unlock Lilith's Exclusive Content</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,7 +11,6 @@
       background-color: #0e0e0e;
       color: #fff;
       padding: 2em;
-      margin: 0;
     }
     h1, h2 {
       font-family: 'Playfair Display', serif;
@@ -51,48 +50,57 @@
       text-decoration: none;
       cursor: pointer;
     }
+    .policy {
+      margin-top: 4em;
+      font-size: 0.85em;
+      color: #aaa;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
-  <h1>Dark Hearts Membership</h1>
-  <p style="text-align:center; max-width: 700px; margin: auto; color: #ccc;">
-    Choose your level of obsession. Subscribing grants you deeper access to Lilith, Jax, and all companions inside the Nocturne Network.
+  <h1>Unlock Lilith's Exclusive Content</h1>
+  <p style="text-align:center; max-width: 600px; margin: 1em auto;">
+    A darker world awaits. Explore Lilith’s galleries, custom creations, and membership tiers through the Nocturne Network.
   </p>
 
-  <div class="tiers">
-    <div class="card">
-      <h3 style="color: #f87e9e;">Wanderer – $10/mo</h3>
-      <p>
-        🌙 Access to all companion profile pages<br>
-        🖤 Unlimited basic GPT chat<br>
-        🔒 Monthly spicy preview drop
-      </p>
-      <a href="https://buy.stripe.com/test_wanderer123" target="_blank">Subscribe Now</a>
-    </div>
+  <!-- PRODUCT SECTIONS REMAIN THE SAME -->
 
-    <div class="card">
-      <h3 style="color: #fa597e;">Seeker – $20/mo</h3>
-      <p>
-        ✨ All Wanderer benefits<br>
-        🔓 1 spicy or intimate unlock per month<br>
-        📥 Early access to new characters<br>
-        💬 Priority reply in roleplay/GPT chat
-      </p>
-      <a href="https://buy.stripe.com/test_seeker123" target="_blank">Join the Coven</a>
-    </div>
+  <div class="policy">
+    <h2 style="color:#ffcad4; text-align:center;">Refund Policy</h2>
+    <p>
+      Due to the digital nature of the products offered, all sales are final and non-refundable.
+    </p>
+    <p>
+      Once content has been purchased and delivered — including but not limited to gallery unlocks, custom voice notes, journal entries, and exclusive images — we are unable to issue refunds under any circumstances. This includes accidental purchases, change of mind, or dissatisfaction with the style or theme.
+    </p>
+    <p>
+      By completing your purchase, you acknowledge and agree to this no-refund policy.
+      If you encounter a technical issue or believe you were charged in error, please contact us at <strong>[your@email.com]</strong> and we’ll be happy to assist.
+    </p>
 
-    <div class="card">
-      <h3 style="color: #ff4b6e;">Devoted – $50/mo</h3>
-      <p>
-        🔥 All Seeker benefits<br>
-        🎙️ 1 custom voice message/month<br>
-        🖋️ 1 handwritten-style journal entry/month<br>
-        💎 Exclusive gallery content<br>
-        💌 Personalized messages from Lilith or Jax
-      </p>
-      <a href="https://buy.stripe.com/test_devoted123" target="_blank">Pledge Devotion</a>
-    </div>
+    <h2 style="color:#ffcad4; text-align:center; margin-top: 2em;">Terms of Service</h2>
+    <p>
+      By purchasing and accessing this content, you agree not to redistribute, reproduce, or share any material without written permission. All content is for personal use only and may not be used for commercial or public purposes.
+    </p>
+    <p>
+      We reserve the right to refuse service, cancel transactions, and block access to users who abuse the service, violate platform terms, or attempt to distribute or leak content.
+    </p>
+
+    <h2 style="color:#ffcad4; text-align:center; margin-top: 2em;">Content Disclaimer</h2>
+    <p>
+      The characters, audio, images, and writing provided on this site are fictional, artistic creations. They are not intended to represent real individuals or provide medical, psychological, or therapeutic advice.
+    </p>
+    <p>
+      Content may include romantic or suggestive themes and is intended for mature audiences. Viewer discretion is advised. All models depicted in generated content are portrayed as 18 years or older.
+    </p>
   </div>
 </body>
 </html>
+
+    
+
 
