--- a/legal.html
+++ b/legal.html
@@ -118,6 +118,8 @@
   <footer>
     <p>
       &copy; 2025 Nocturne Nights. All rights reserved.<br>
+      <a href="index.html">Home</a> |
+      <a href="membership.html">Membership</a> |
       <a href="legal.html">Legal & Policies</a> |
       <a href="#">Privacy</a> |
       <a href="#">Contact</a>
@@ -125,5 +127,3 @@
   </footer>
 </body>
 </html>
-
-
