--- a/membership.html
+++ b/membership.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unlock Lilith's Exclusive Content</title>
+  <title>Dark Hearts Membership</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     body {
@@ -59,15 +59,64 @@
       margin-right: auto;
       line-height: 1.6;
     }
+    footer {
+      text-align: center;
+      margin-top: 4em;
+      padding-top: 2em;
+      border-top: 1px solid #333;
+      font-size: 0.85em;
+      color: #888;
+    }
+    footer a {
+      color: #ffcad4;
+      text-decoration: none;
+      margin: 0 1em;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <h1>Unlock Lilith's Exclusive Content</h1>
-  <p style="text-align:center; max-width: 600px; margin: 1em auto;">
-    A darker world awaits. Explore Lilith’s galleries, custom creations, and membership tiers through the Nocturne Network.
+  <h1>Dark Hearts Membership</h1>
+  <p style="text-align:center; max-width: 700px; margin: auto; color: #ccc;">
+    Choose your level of obsession. Subscribing grants you deeper access to Lilith, Jax, and all companions inside the Nocturne Network.
   </p>
 
-  <!-- PRODUCT SECTIONS REMAIN THE SAME -->
+  <div class="tiers">
+    <div class="card">
+      <h3 style="color: #f87e9e;">Wanderer – $10/mo</h3>
+      <p>
+        🌙 Access to all companion profile pages<br>
+        🖤 Unlimited basic GPT chat<br>
+        🔒 Monthly spicy preview drop
+      </p>
+      <a href="https://yourname.gumroad.com/l/wanderer" target="_blank">Subscribe Now</a>
+    </div>
+
+    <div class="card">
+      <h3 style="color: #fa597e;">Seeker – $20/mo</h3>
+      <p>
+        ✨ All Wanderer benefits<br>
+        🔓 1 spicy or intimate unlock per month<br>
+        📥 Early access to new characters<br>
+        💬 Priority reply in roleplay/GPT chat
+      </p>
+      <a href="https://yourname.gumroad.com/l/seeker" target="_blank">Join the Coven</a>
+    </div>
+
+    <div class="card">
+      <h3 style="color: #ff4b6e;">Devoted – $50/mo</h3>
+      <p>
+        🔥 All Seeker benefits<br>
+        🎙️ 1 custom voice message/month<br>
+        🖋️ 1 handwritten-style journal entry/month<br>
+        💎 Exclusive gallery content<br>
+        💌 Personalized messages from Lilith or Jax
+      </p>
+      <a href="https://yourname.gumroad.com/l/devoted" target="_blank">Pledge Devotion</a>
+    </div>
+  </div>
 
   <div class="policy">
     <h2 style="color:#ffcad4; text-align:center;">Refund Policy</h2>
@@ -98,9 +147,19 @@
       Content may include romantic or suggestive themes and is intended for mature audiences. Viewer discretion is advised. All models depicted in generated content are portrayed as 18 years or older.
     </p>
   </div>
+
+  <footer>
+    <p>
+      &copy; 2025 Nocturne Nights. All rights reserved.<br>
+      <a href="index.html">Home</a> |
+      <a href="membership.html">Membership</a> |
+      <a href="legal.html">Legal & Policies</a> |
+      <a href="#">Privacy</a> |
+      <a href="#">Contact</a>
+    </p>
+  </footer>
 </body>
 </html>
 
     
-
-
+  
