--- a/legal.html
+++ b/legal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unlock Lilith's Exclusive Content</title>
+  <title>Legal & Policies</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,53 +11,20 @@
       background-color: #0e0e0e;
       color: #fff;
       padding: 2em;
+      line-height: 1.6;
     }
     h1, h2 {
       font-family: 'Playfair Display', serif;
       color: #ffcad4;
       text-align: center;
     }
-    .tiers {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2em;
-      margin-top: 2em;
+    .section {
+      max-width: 800px;
+      margin: 2em auto;
     }
-    .card {
-      background-color: #1a1a1a;
-      padding: 2em;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(255, 202, 212, 0.2);
-      text-align: center;
-    }
-    .card h3 {
-      margin-top: 0;
-      font-size: 1.4em;
-    }
-    .card p {
+    p {
       font-size: 0.95em;
       color: #ccc;
-    }
-    .card a {
-      display: inline-block;
-      margin-top: 1em;
-      padding: 0.75em 1.5em;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      background-color: #8b0000;
-      color: #fff;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    .policy {
-      margin-top: 4em;
-      font-size: 0.85em;
-      color: #aaa;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.6;
     }
     footer {
       text-align: center;
@@ -78,15 +45,10 @@
   </style>
 </head>
 <body>
-  <h1>Unlock Lilith's Exclusive Content</h1>
-  <p style="text-align:center; max-width: 600px; margin: 1em auto;">
-    A darker world awaits. Explore Lilith’s galleries, custom creations, and membership tiers through the Nocturne Network.
-  </p>
+  <h1>Legal & Policy Information</h1>
 
-  <!-- PRODUCT SECTIONS REMAIN THE SAME -->
-
-  <div class="policy">
-    <h2 style="color:#ffcad4; text-align:center;">Refund Policy</h2>
+  <div class="section">
+    <h2>Refund Policy</h2>
     <p>
       Due to the digital nature of the products offered, all sales are final and non-refundable.
     </p>
@@ -97,16 +59,20 @@
       By completing your purchase, you acknowledge and agree to this no-refund policy.
       If you encounter a technical issue or believe you were charged in error, please contact us at <strong>[your@email.com]</strong> and we’ll be happy to assist.
     </p>
+  </div>
 
-    <h2 style="color:#ffcad4; text-align:center; margin-top: 2em;">Terms of Service</h2>
+  <div class="section">
+    <h2>Terms of Service</h2>
     <p>
       By purchasing and accessing this content, you agree not to redistribute, reproduce, or share any material without written permission. All content is for personal use only and may not be used for commercial or public purposes.
     </p>
     <p>
       We reserve the right to refuse service, cancel transactions, and block access to users who abuse the service, violate platform terms, or attempt to distribute or leak content.
     </p>
+  </div>
 
-    <h2 style="color:#ffcad4; text-align:center; margin-top: 2em;">Content Disclaimer</h2>
+  <div class="section">
+    <h2>Content Disclaimer</h2>
     <p>
       The characters, audio, images, and writing provided on this site are fictional, artistic creations. They are not intended to represent real individuals or provide medical, psychological, or therapeutic advice.
     </p>
