--- a/lilith-spicy.html
+++ b/lilith-spicy.html
@@ -60,15 +60,15 @@
 
   <div class="gallery">
     <div>
-      <img src="images/lilith-spicy1.jpg" alt="Lilith in red lace">
+      <img src="images/lilith-spicy1.png" alt="Lilith in red lace">
       <p class="caption">“Did you miss me… or just the way I make you feel?”</p>
     </div>
     <div>
-      <img src="images/lilith-spicy2.jpg" alt="Lilith by candlelight">
+      <img src="images/lilith-spicy2.png" alt="Lilith by candlelight">
       <p class="caption">“Come closer… no, closer than that.”</p>
     </div>
     <div>
-      <img src="images/lilith-spicy3.jpg" alt="Lilith at midnight">
+      <img src="images/lilith-spicy3.png" alt="Lilith at midnight">
       <p class="caption">“The night doesn't end until I say it does.”</p>
     </div>
   </div>
