--- a/buy-more.html
+++ b/buy-more.html
@@ -63,7 +63,7 @@
     <div class="card">
       <h3>Spicy Tier – $5</h3>
       <p>3 seductive images<br>+ teasing captions<br>+ digital access link</p>
-      <a href="https://legendarycreations.gumroad.com/l/mexdl">Unlock via Gumroad</a>
+      <a href="https://legendarycreations.gumroad.com/l/bdwcg">Unlock via Gumroad</a>
     </div>
     <div class="card">
       <h3>Intimate Tier – $10</h3>
