--- a/buy-more.html
+++ b/buy-more.html
@@ -68,7 +68,7 @@
     <div class="card">
       <h3>Intimate Tier – $10</h3>
       <p>3 personal, emotional images<br>+ soft connection energy<br>+ digital access link</p>
-      <a href="https://yourname.gumroad.com/l/lilith-intimate">Unlock via Gumroad</a>
+      <a href="https://legendarycreations.gumroad.com/l/kyhqu">Unlock via Gumroad</a>
     </div>
     <div class="card">
       <h3>Uncensored Tier – $20</h3>
