--- a/buy-more.html
+++ b/buy-more.html
@@ -73,7 +73,7 @@
     <div class="card">
       <h3>Uncensored Tier – $20</h3>
       <p>3 NSFW images<br>+ poetic intensity<br>+ uncensored gallery</p>
-      <a href="https://yourname.gumroad.com/l/lilith-uncensored">Unlock via Gumroad</a>
+      <a href="https://legendarycreations.gumroad.com/l/ymieq">Unlock via Gumroad</a>
     </div>
   </div>
 
