--- a/membership.html
+++ b/membership.html
@@ -91,7 +91,7 @@
         🖤 Unlimited basic GPT chat<br>
         🔒 Monthly spicy preview drop
       </p>
-      <a href="https://yourname.gumroad.com/l/wanderer" target="_blank">Subscribe Now</a>
+      <a href="https://legendarycreations.gumroad.com/l/pwstu" target="_blank">Subscribe Now</a>
     </div>
 
     <div class="card">
