--- a/membership.html
+++ b/membership.html
@@ -102,7 +102,7 @@
         📥 Early access to new characters<br>
         💬 Priority reply in roleplay/GPT chat
       </p>
-      <a href="https://yourname.gumroad.com/l/seeker" target="_blank">Join the Coven</a>
+      <a href="https://legendarycreations.gumroad.com/l/oyzhgt" target="_blank">Join the Coven</a>
     </div>
 
     <div class="card">
@@ -112,7 +112,7 @@
         🎙️ 1 custom voice message/month<br>
         🖋️ 1 handwritten-style journal entry/month<br>
         💎 Exclusive gallery content<br>
-        💌 Personalized messages from Lilith or Jax
+        💌 Personalized messages from Companion of choice
       </p>
       <a href="https://yourname.gumroad.com/l/devoted" target="_blank">Pledge Devotion</a>
     </div>
