--- a/membership.html
+++ b/membership.html
@@ -114,7 +114,7 @@
         💎 Exclusive gallery content<br>
         💌 Personalized messages from Companion of choice
       </p>
-      <a href="https://yourname.gumroad.com/l/devoted" target="_blank">Pledge Devotion</a>
+      <a href="https://legendarycreations.gumroad.com/l/mqype" target="_blank">Pledge Devotion</a>
     </div>
   </div>
 
