--- a/members-only.html
+++ b/members-only.html
@@ -90,8 +90,10 @@
       <p>💌 Personalized messages monthly</p>
       <p>🎙️ 1 Custom voice message/month</p>
       <p>🖋️ 1 Journal entry delivered to you</p>
-      <a href="mailto:JessIsLegend@darkheartsxoxoxai.com?subject=Devoted%20Voice%20Request">Request Voice Message</a><br>
-      <a href="JessIsLegend@darkheartsxoxoxai.com?subject=Devoted%20Journal%20Request">Request Journal Entry</a><br>
+      <a href="<a href="request.html">Submit Custom Request</a>
+">Request Voice Message</a><br>
+      <a href="<a href="request.html">Submit Custom Request</a>
+">Request Journal Entry</a><br>
       <a href="lilith-uncensored.html">Unlock Lilith's Uncensored Gallery</a>
     </div>
   </div>
