--- a/request.html
+++ b/request.html
@@ -78,7 +78,7 @@
     <!-- HIDDEN SPAM FIELD -->
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="box">
-    <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html">
+    <input type="hidden" name="_next" value="https://github.com/DarkHeartsXOXOX/Dark_Hearts/thank-you.html">
 
     <label for="name">Your Name or Username</label>
     <input type="text" name="name" id="name" required>
