--- a/members.html
+++ b/members.html
@@ -90,9 +90,9 @@
       <p>💌 Personalized messages monthly</p>
       <p>🎙️ 1 Custom voice message/month</p>
       <p>🖋️ 1 Journal entry delivered to you</p>
-      <a href="<a href="request.html">Submit Custom Request</a>
+      <a href="request.html">Submit Custom Request</a>
 ">Request Voice Message</a><br>
-      <a href="<a href="request.html">Submit Custom Request</a>
+      <a href="request.html">Submit Custom Request</a>
 ">Request Journal Entry</a><br>
       <a href="lilith-uncensored.html">Unlock Lilith's Uncensored Gallery</a>
     </div>
