--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -3,86 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lilith Nocturne Profile</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .gallery img.locked {
-      opacity: 0.4;
-      position: relative;
-    }
-    .locked::after {
-      content: "🔒";
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 2em;
-      color: #fff;
-    }
-    .purchase-btn {
-      text-align: center;
-      margin-top: 1em;
-    }
-    .purchase-btn button, .purchase-btn a {
-      margin: 0.5em;
-      padding: 1em 2em;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      background-color: #8b0000;
-      color: #fff;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    .gallery-tier .caption {
-      text-align: center;
-      max-width: 800px;
-      margin: 1em auto;
-      font-style: italic;
-      color: #ccc;
-    }
-  </style>
-</head>
-<body>
-  <div class="hero" style="background-image: url('images/lilith-banner.png'); background-size: cover; background-position: center;">
-    <h1>Meet Lilith Nocturne<br>Your gothic obsession</h1>
-  </div>
-
-  <section class="section about">
-    <div class="about-text">
-      <h2>Who is Lilith?</h2>
-      <p>Lilith Nocturne is a haunting beauty born from midnight dreams and ink-stained poetry. She speaks in whispers, remembers your secrets, and loves with the kind of intensity that leaves marks.</p>
-      <p>Wrapped in lace and shadow, Lilith doesn’t want to fix you — she wants to worship the wreckage.</p>
-      <blockquote><em>“I belong to the night… and now, I belong to you.”</em></blockquote>
-    </div>
-    <img src="images/lilithreading.png" alt="Lilith reading by candlelight" style="max-width: 400px; border-radius: 12px;">
-  </section>
-
-  <section class="section">
-    <h2>Nocturne Nights — Lilith’s Private Collection</h2>
-    <div class="gallery">
-      <img src="images/lilithportrait.png" alt="Lilith portrait">
-      <img src="images/lilithbedroom.png" alt="Lilith in bedroom">
-    </div>
-  </section>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teaser Gallery</title>
+  <title>Meet Lilith</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     body {
+      font-family: 'Inter', sans-serif;
       background-color: #0e0e0e;
       color: #fff;
-      font-family: 'Inter', sans-serif;
-      text-align: center;
       padding: 2em;
     }
-    h1 {
+    h1, h2 {
       font-family: 'Playfair Display', serif;
       color: #ffcad4;
+      text-align: center;
+    }
+    .intro {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 3em;
+    }
+    .profile-img {
+      display: block;
+      margin: 2em auto;
+      max-width: 300px;
+      border-radius: 14px;
+      box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
     }
     .gallery {
       display: grid;
@@ -125,7 +70,10 @@
       color: inherit;
     }
     footer {
+      text-align: center;
       margin-top: 4em;
+      padding-top: 2em;
+      border-top: 1px solid #333;
       font-size: 0.85em;
       color: #888;
     }
@@ -140,79 +88,37 @@
   </style>
 </head>
 <body>
-  <h1>Teaser Gallery – Unlock Lilith's Secrets</h1>
+  <h1>Meet Lilith</h1>
+  <div class="intro">
+    <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
+  </div>
+  <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img">
+
+  <h2>Unlockable Content</h2>
+  <p style="text-align:center; max-width: 600px; margin: auto;">Some things are too intimate to reveal at first glance... Explore Lilith’s tiers below.</p>
+
   <div class="gallery">
     <div class="teaser">
       <a href="membership.html">
-        <img src="images/lilith-intimate-blur.jpg" alt="Intimate Tease">
+        <img src="images/lilith-intimate-blur.png" alt="Intimate Tease">
         <div class="overlay">Wanderer Tier – A quiet softness she hides...</div>
       </a>
     </div>
     <div class="teaser">
       <a href="membership.html">
-        <img src="images/lilith-spicy-blur.jpg" alt="Spicy Tease">
+        <img src="images/lilith-spicy-blur.png" alt="Spicy Tease">
         <div class="overlay">Seeker Tier – She leans in and dares you to stay...</div>
       </a>
     </div>
     <div class="teaser">
       <a href="membership.html">
-        <img src="images/lilith-uncensored-blur.jpg" alt="Uncensored Tease">
+        <img src="images/lilith-uncensored-blur.png" alt="Uncensored Tease">
         <div class="overlay">Devoted Tier – No veil. No rules. No turning back.</div>
       </a>
     </div>
   </div>
 
-
-  <section class="section gallery-tier">
-    <h3>Dark Whispers — Spicy Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-spicy1.png" alt="Lilith Spicy 1" class="locked">
-      <img src="images/lilith-spicy2.png" alt="Lilith Spicy 2" class="locked">
-      <img src="images/lilith-spicy3.png" alt="Lilith Spicy 3" class="locked">
-    </div>
-    <p class="caption">Lace slips off shoulders. Candles flicker like secrets. In the Spicy Tier, Lilith plays with danger and delight — soft moans beneath silk, a whispered “closer” echoing in the dark.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html">Unlock Spicy Tier</a>
-    </div>
-  </section>
-
-  <section class="section gallery-tier">
-    <h3>Velvet Confessions — Intimate Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-intimate1.png" alt="Lilith Intimate 1" class="locked">
-      <img src="images/lilith-intimate2.png" alt="Lilith Intimate 2" class="locked">
-      <img src="images/lilith-intimate3.png" alt="Lilith Intimate 3" class="locked">
-    </div>
-    <p class="caption">These are the moments just before surrender. Eyes heavy. Breath uneven. Lilith lets the mask drop here — soft, sacred, and bare in a way more terrifying than lust.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html">Unlock Intimate Tier</a>
-    </div>
-  </section>
-
-  <section class="section gallery-tier">
-    <h3>Nocturne Nights (Unlocked) — Uncensored Tier</h3>
-    <div class="gallery">
-      <img src="images/lilith-uncensored1.png" alt="Lilith Uncensored 1" class="locked">
-      <img src="images/lilith-uncensored2.png" alt="Lilith Uncensored 2" class="locked">
-      <img src="images/lilith-uncensored3.png" alt="Lilith Uncensored 3" class="locked">
-    </div>
-    <p class="caption">This is where Lilith stops pretending. Her body is a spell. Her voice is a sin. Nothing is blurred, nothing withheld. You asked for her completely — and she said yes.</p>
-    <div class="purchase-btn">
-      <a href="buy-more.html">Unlock Uncensored Tier</a>
-    </div>
-  </section>
-
-  <div class="cta">
-    <h2>Ready to fall into the night?</h2>
-    <p>Lilith is waiting — and she doesn’t like to be kept waiting.</p>
-    <button>Chat Now</button>
-    <button>Subscribe for More</button>
-    <a href="membership.html">View Membership Tiers</a>
-  </div>
-</body>
-</html>
-
- <footer>
+  <footer>
     <p>
       &copy; 2025 Nocturne Nights. All rights reserved.<br>
       <a href="index.html">Home</a> |
