--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -10,12 +10,28 @@
       font-family: 'Inter', sans-serif;
       background-color: #0e0e0e;
       color: #fff;
-      padding: 2em;
+      margin: 0;
+      padding: 0;
     }
-    h1, h2 {
+    header {
+      background-image: url('images/lilith-banner.png');
+      background-size: cover;
+      background-position: center;
+      height: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    header h1 {
       font-family: 'Playfair Display', serif;
       color: #ffcad4;
-      text-align: center;
+      font-size: 3em;
+      text-shadow: 2px 2px 6px #000;
+    }
+    .content {
+      padding: 2em;
+      max-width: 1000px;
+      margin: auto;
     }
     .intro {
       text-align: center;
@@ -29,12 +45,23 @@
       border-radius: 14px;
       box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
     }
+    .main-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2em;
+      margin-top: 3em;
+    }
+    .main-gallery img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 0 14px rgba(255, 202, 212, 0.15);
+    }
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2em;
+      margin: 4em auto 2em;
       max-width: 1000px;
-      margin: 2em auto;
     }
     .teaser {
       position: relative;
@@ -88,33 +115,43 @@
   </style>
 </head>
 <body>
-  <h1>Meet Lilith</h1>
-  <div class="intro">
-    <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
-  </div>
-  <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img">
-
-  <h2>Unlockable Content</h2>
-  <p style="text-align:center; max-width: 600px; margin: auto;">Some things are too intimate to reveal at first glance... Explore Lilith’s tiers below.</p>
-
-  <div class="gallery">
-    <div class="teaser">
-      <a href="membership.html">
-        <img src="images/lilith-intimate-blur.png" alt="Intimate Tease">
-        <div class="overlay">Wanderer Tier – A quiet softness she hides...</div>
-      </a>
+  <header>
+    <h1>Meet Lilith</h1>
+  </header>
+  <div class="content">
+    <div class="intro">
+      <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
     </div>
-    <div class="teaser">
-      <a href="membership.html">
-        <img src="images/lilith-spicy-blur.png" alt="Spicy Tease">
-        <div class="overlay">Seeker Tier – She leans in and dares you to stay...</div>
-      </a>
+    <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img">
+
+    <div class="main-gallery">
+      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+      <img src="images/lilith-intimate.png" alt="Lilith intimate moment">
+      <img src="images/lilith-spicy.png" alt="Lilith spicy vibe">
     </div>
-    <div class="teaser">
-      <a href="membership.html">
-        <img src="images/lilith-uncensored-blur.png" alt="Uncensored Tease">
-        <div class="overlay">Devoted Tier – No veil. No rules. No turning back.</div>
-      </a>
+
+    <h2 style="margin-top: 4em; text-align: center; color: #ffcad4;">Unlockable Content</h2>
+    <p style="text-align:center; max-width: 600px; margin: auto;">Some things are too intimate to reveal at first glance... Explore Lilith’s tiers below.</p>
+
+    <div class="gallery">
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-intimate-blur.png" alt="Intimate Tease">
+          <div class="overlay">Wanderer Tier – A quiet softness she hides...</div>
+        </a>
+      </div>
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-spicy-blur.png" alt="Spicy Tease">
+          <div class="overlay">Seeker Tier – She leans in and dares you to stay...</div>
+        </a>
+      </div>
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-uncensored-blur.png" alt="Uncensored Tease">
+          <div class="overlay">Devoted Tier – No veil. No rules. No turning back.</div>
+        </a>
+      </div>
     </div>
   </div>
 
@@ -128,3 +165,8 @@
   </footer>
 </body>
 </html>
+
+ 
+    
+    
+   
