--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -96,6 +96,23 @@
       text-decoration: none;
       color: inherit;
     }
+    .unlock-links {
+      text-align: center;
+      margin-top: 4em;
+    }
+    .unlock-links a {
+      display: inline-block;
+      background-color: #8b0000;
+      color: #fff;
+      padding: 1em 2em;
+      border-radius: 8px;
+      margin: 1em;
+      text-decoration: none;
+      font-size: 1em;
+    }
+    .unlock-links a:hover {
+      background-color: #a80000;
+    }
     footer {
       text-align: center;
       margin-top: 4em;
@@ -153,6 +170,15 @@
         </a>
       </div>
     </div>
+
+    <h2 style="text-align: center; color: #ffcad4; margin-top: 4em;">Prefer a One-Time Unlock?</h2>
+    <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Not ready to commit to a membership? You can purchase individual access to Lilith’s galleries:</p>
+
+    <div class="unlock-links">
+      <a href="https://legendarycreations.gumroad.com/l/kyhqu" target="_blank">Unlock Intimate ($3)</a>
+      <a href="https://legendarycreations.gumroad.com/l/bdwcg" target="_blank">Unlock Spicy ($4)</a>
+      <a href="https://legendarycreations.gumroad.com/l/ymieq" target="_blank">Unlock Uncensored ($5)</a>
+    </div>
   </div>
 
   <footer>
@@ -165,8 +191,3 @@
   </footer>
 </body>
 </html>
-
- 
-    
-    
-   
