--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -175,9 +175,18 @@
     <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Not ready to commit to a membership? You can purchase individual access to Lilith’s galleries:</p>
 
     <div class="unlock-links">
-      <a href="https://legendarycreations.gumroad.com/l/kyhqu" target="_blank">Unlock Intimate ($8)</a>
-      <a href="https://legendarycreations.gumroad.com/l/bdwcg" target="_blank">Unlock Spicy ($5)</a>
-      <a href="https://legendarycreations.gumroad.com/l/ymieq" target="_blank">Unlock Uncensored ($10)</a>
+      <a href="https://legendarycreations.gumroad.com/l/kyhqu" target="_blank">Unlock Intimate ($3)</a>
+      <a href="https://legendarycreations.gumroad.com/l/bdwcg" target="_blank">Unlock Spicy ($4)</a>
+      <a href="https://legendarycreations.gumroad.com/l/ymieq" target="_blank">Unlock Uncensored ($5)</a>
+    </div>
+
+    <h2 style="text-align: center; color: #ffcad4; margin-top: 4em;">Request Something Personal</h2>
+    <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Want Lilith to whisper something just for you? Or pour her thoughts into a custom journal? Make your request below:</p>
+
+    <div class="unlock-links">
+      <a href="https://legendarycreations.gumroad.com/l/rnlmyb" target="_blank">🎙️ Voice Note ($8)</a>
+      <a href="https://legendarycreations.gumroad.com/l/mvhtkl" target="_blank">📓 Journal Entry ($12)</a>
+      <a href="https://legendarycreations.gumroad.com/l/cwvar" target="_blank">✨ Voice + Journal Combo ($18)</a>
     </div>
   </div>
 
