--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -113,6 +113,22 @@
     .unlock-links a:hover {
       background-color: #a80000;
     }
+    .gallery-link {
+      text-align: center;
+      margin-top: 3em;
+    }
+    .gallery-link a {
+      display: inline-block;
+      background-color: #8b0000;
+      color: #fff;
+      padding: 1em 2.5em;
+      font-size: 1em;
+      border-radius: 10px;
+      text-decoration: none;
+    }
+    .gallery-link a:hover {
+      background-color: #a80000;
+    }
     footer {
       text-align: center;
       margin-top: 4em;
@@ -187,6 +203,11 @@
       <a href="https://legendarycreations.gumroad.com/l/rnlmyb" target="_blank">🎙️ Voice Note ($8)</a>
       <a href="https://legendarycreations.gumroad.com/l/mvhtkl" target="_blank">📓 Journal Entry ($12)</a>
       <a href="https://legendarycreations.gumroad.com/l/cwvar" target="_blank">✨ Voice + Journal Combo ($18)</a>
+    </div>
+
+    <div class="gallery-link">
+      <h2>📸 Explore Bonus Image Sets</h2>
+      <a href="bonus-gallery.html">View Lilith's Bonus Gallery</a>
     </div>
   </div>
 
